integrating new micro svcs
added the sport --> athlete and category --> choice UI
added view and controller for each
added menu entries for sport/category
added routeParams to get to filtered child lists

--- a/www/index.html
+++ b/www/index.html
@@ -35,6 +35,10 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+    <script src="app/sports/sports.ctrl.js"></script>
+    <script src="app/categories/categories.ctrl.js"></script>
+    <script src="app/choices/choices.ctrl.js"></script>
+    <script src="app/athletes/athletes.ctrl.js"></script>
   </head>
 
   <body ng-app="starter">
